fix some pages style on small screens

--- a/public/css/account/favorites.css
+++ b/public/css/account/favorites.css
@@ -126,7 +126,7 @@
 
 
 /* #############  Media Sizes  ############# */
-@media only screen and (max-width: 1400px) {
+@media only screen and (max-width: 1200px) {
     .ads__slide {
         grid-template-columns: repeat(2, 1fr);
     }
