--- a/public/css/ad.css
+++ b/public/css/ad.css
@@ -297,7 +297,7 @@
 
 
 /* #############  Media Sizes  ############# */
-@media only screen and (max-width: 1400px) {
+@media only screen and (max-width: 1200px) {
     .s_ads__slide {
         grid-template-columns: repeat(2, 1fr);
     }
